# docs/swagger.json
@@ -212,6 +212,9 @@
                 "account_id": {
                     "type": "integer"
                 },
+                "available_credit_limit": {
+                    "type": "number"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -223,9 +226,14 @@
         "model.CreateAccountRequest": {
             "type": "object",
             "required": [
+                "available_credit_limit",
                 "document_number"
             ],
             "properties": {
+                "available_credit_limit": {
+                    "type": "number",
+                    "example": 22.2
+                },
                 "document_number": {
                     "type": "string",
                     "example": "12345678900"
